--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,164 @@
-transformers==4.35.0
-
-diffusers~=0.18.2
+accelerate @ file:///croot/huggingface_accelerate_1689791909533/work
+aiofiles==23.2.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+altair==5.1.2
+antlr4-python3-runtime==4.9.3
+anyio==3.7.1
+async-timeout==4.0.3
+attrs==23.1.0
+audiocraft @ git+https://github.com/facebookresearch/audiocraft.git@5905d2ef2526a38d4231096696218b5d4d55752b
+audioread==3.0.1
+av==11.0.0
+blis==0.7.11
+Brotli @ file:///work/ci_py311/brotli-split_1676830125088/work
+catalogue==2.0.10
+certifi @ file:///croot/certifi_1690232220950/work/certifi
+cffi @ file:///work/ci_py311/cffi_1676822533496/work
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+colorlog==6.7.0
+confection==0.1.3
+contourpy==1.2.0
+cryptography @ file:///croot/cryptography_1694444244250/work
+cycler==0.12.1
+cymem==2.0.8
+datasets==2.14.6
+decorator==5.1.1
+demucs==4.0.1
+diffusers @ file:///croot/diffusers-suite_1690899988292/work
+dill==0.3.7
+docopt==0.6.2
+dora-search==0.1.12
+einops==0.7.0
+encodec==0.1.1
+fastapi==0.104.1
+ffmpy==0.3.1
+filelock==3.13.1
+flashy==0.0.2
+fonttools==4.44.1
+frozenlist==1.4.0
+fsspec==2023.10.0
+gmpy2 @ file:///work/ci_py311/gmpy2_1676839849213/work
+gradio==3.50.2
+gradio_client==0.6.1
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.1
+huggingface-hub @ file:///croot/huggingface_hub_1696885858075/work
+hydra-colorlog==1.2.0
+hydra-core==1.3.2
+idna @ file:///work/ci_py311/idna_1676822698822/work
+importlib-metadata @ file:///croot/importlib-metadata_1678997070253/work
+importlib-resources==6.1.1
+invisible-watermark==0.2.0
+Jinja2 @ file:///work/ci_py311/jinja2_1676823587943/work
+joblib==1.3.2
+jsonschema==4.19.2
+jsonschema-specifications==2023.11.1
+julius==0.2.7
+kiwisolver==1.4.5
+lameenc==1.6.3
+langcodes==3.3.0
+lazy_loader==0.3
+librosa==0.10.1
+lightning-utilities==0.9.0
+llvmlite==0.41.1
+MarkupSafe==2.1.3
+matplotlib==3.8.1
+mkl-fft @ file:///croot/mkl_fft_1695058164594/work
+mkl-random @ file:///croot/mkl_random_1695059800811/work
+mkl-service==2.4.0
+mpmath @ file:///croot/mpmath_1690848262763/work
+msgpack==1.0.7
+multidict==6.0.4
+multiprocess==0.70.15
+murmurhash==1.0.10
+networkx==3.2.1
+num2words==0.5.13
+numba==0.58.1
+numpy==1.26.1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.52
+nvidia-nvtx-cu12==12.1.105
+omegaconf==2.3.0
+opencv-python==4.8.1.78
+openunmix==1.2.1
+orjson==3.9.10
+packaging @ file:///croot/packaging_1693575174725/work
+pandas==2.1.3
+pathy==0.10.3
+Pillow @ file:///croot/pillow_1696580024257/work
+platformdirs==4.0.0
+pooch==1.8.0
+preshed==3.0.9
+printy==2.2.0
+protobuf==4.25.0
+psutil @ file:///work/ci_py311_2/psutil_1679337388738/work
+pyarrow==14.0.1
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==1.10.13
+pydub==0.25.1
+pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
+pyparsing==3.1.1
+PySocks @ file:///work/ci_py311/pysocks_1676822712504/work
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3.post1
+PyWavelets==1.4.1
+PyYAML @ file:///croot/pyyaml_1698096049011/work
+referencing==0.31.0
+regex @ file:///croot/regex_1696515298636/work
+requests @ file:///croot/requests_1690400202158/work
+retrying==1.3.4
+rpds-py==0.12.0
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.3
+semantic-version==2.10.0
+sentencepiece==0.1.99
+six==1.16.0
+smart-open==6.4.0
+sniffio==1.3.0
+soundfile==0.12.1
+soxr==0.3.7
+spacy==3.5.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+starlette==0.27.0
+submitit==1.5.1
+sympy @ file:///work/ci_py311_2/sympy_1679339311852/work
+thinc==8.1.12
+threadpoolctl==3.2.0
+tokenizers==0.14.1
+toolz==0.12.0
+torch==2.1.0
+torchaudio==2.1.0
+torchmetrics==1.2.0
+tqdm @ file:///croot/tqdm_1679561862951/work
+transformers==4.35.1
+treetable==0.2.5
+triton==2.1.0
+typer==0.7.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.7
+uvicorn==0.24.0.post1
+wasabi==1.1.2
+websockets==11.0.3
+xformers==0.0.22.post7
+xxhash==3.4.1
+yarl==1.9.2
+zipp @ file:///work/ci_py311/zipp_1676822894295/work
