--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ attrs==23.1.0
 audiocraft @ git+https://github.com/facebookresearch/audiocraft.git@5905d2ef2526a38d4231096696218b5d4d55752b
 audioread==3.0.1
 av==11.0.0
+black==23.11.0
 blis==0.7.11
 Brotli @ file:///work/ci_py311/brotli-split_1676830125088/work
 catalogue==2.0.10
@@ -76,6 +77,7 @@ msgpack==1.0.7
 multidict==6.0.4
 multiprocess==0.70.15
 murmurhash==1.0.10
+mypy-extensions==1.0.0
 networkx==3.2.1
 num2words==0.5.13
 numba==0.58.1
@@ -98,6 +100,7 @@ openunmix==1.2.1
 orjson==3.9.10
 packaging @ file:///croot/packaging_1693575174725/work
 pandas==2.1.3
+pathspec==0.11.2
 pathy==0.10.3
 Pillow @ file:///croot/pillow_1696580024257/work
 platformdirs==4.0.0
